ros2_ws/log/build_2024-11-23_16-04-46/controller/stderr.log
  File "/home/DATA/DogRobot/ros2_ws/install/controller/lib/python3.12/site-packages/controller/quadrupedRobot.py", line 381
    if (self.idxFR == 7 and ) or (self.idx == ):
                            ^
SyntaxError: invalid syntax

